1. cannot non-transpert div on transpert one use this: http://stackoverflow.com/questions/2356711/create-non-transparent-div-on-top-of-transparent-parent-element trick instead 2. fix some issues..

--- a/kalaniyot/WebContent/css/kalaniyot.css
+++ b/kalaniyot/WebContent/css/kalaniyot.css
@@ -126,6 +126,7 @@ body { /* 	font-family:Georgia, Times, serifs; */
 	
 	padding-top: 7px;
 	background-color: #ffffff;
+	z-index: -1;
 }
 
 .is-shade-top {
@@ -173,7 +174,13 @@ body { /* 	font-family:Georgia, Times, serifs; */
 	padding-right: 7px;
 
 }
-.open-menu:before {
+.open-menu:after{
 	content: "\25BC";
 	/* "\27a2\a0"; */
+}
+
+.realyhigh {
+  background-color: #FFF;
+    border: 4px solid #333;
+    z-index: 100; /* Important to set this higher than .modal */
 }
